--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 /* Styling for the header, top row */
 header{
     margin: 0 auto;
-    height: 70px;
+    height: 10%;
 }
 .titleLine{
     text-align: center;
@@ -24,40 +24,69 @@ h1{
 }
 
 /* Styling for middle row */
+.activeField{
+    width: 100%;
+    max-height: 400px;
+    padding: 2%;
+    display: inline-flex;
+}
         /* Score area */
+.scoreBoard{
+    width: 15%;
+    max-height: 100%;
+    padding: 1%;
+    font-size: 1.5em;
+    color: white;
+    display: inline-block;
+    text-align: center;
+}
 h2{
     color: blue;
-    font-size: 18px;
+    font-size: 1.2em;
 }
 .score{
-    width: 100px;
-    left: 40px;
-    top: 136px;
-    height: 300px;
-    font-size: 10px;
-    color: white;
+    margin: 0 auto;
+    padding: 5% 0 10% 0;
+    text-align: center;
+}
+.win, .guess {
+    padding: 10% 0;
+
 }
         /* Battle Image area */
-.hidePlay{
-    opacity: 0;
-}
-.Battle{
-    left: 10%;
+.battle{
+    width: 52%;
+    max-height: 100%;
+    padding: 2% 1%;
 }
 .Background{
-    width: 500px;
-    height: 150px;
-    opacity: .75;position: relative;
-    top: 35%;
-    left: 10%;
+    width: 100%;
+    height: 80%;
+    opacity: .75;
+    position: relative;
+    z-index: 1000;
+    padding: 2%;
 }
         /* Letters guessed area */
 li{
     display: inline-block;
     list-style-type: none;
 }
-
+.letter{
+    margin: 0 auto;
+    padding: 10% 0;
+    text-align: center;
+}
+.pots{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    margin: 0px 1px;
+}
 /* Styling for word guessing area */
+h3{
+    color:green;
+}
 .word-area li{
     display: inline-block;
     width: 40px;
@@ -68,27 +97,15 @@ li{
     border-bottom-color: yellow;
     margin: 0px 5px;
 }
-h3{
-    color:green;
-}
 .guess-area{
-    position: relative; 
-    width: 600px;
-    left: 27%;
-    top: 20px;
-    height: 100px;
+    position: inherit; 
+    height: 20%;
     z-index: 500;
     background-color: black;
     text-align: center;
     font-size: 35px;
     color:white;
     opacity: 1;
-}
-.pots{
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    margin: 0px 1px;
 }
 .correct{
     color: yellow;
