continuing to work on functionality

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@ h3{
     border-bottom-width: 2px;
     border-bottom-color: yellow;
     margin: 0px 5px;
+    color: yellow;
 }
 .guess-area{
     position: inherit; 
